maboobecker@yahoo.com/src/objects/Position__c.object
<CustomObject>
    <customHelpPage>Test_Help</customHelpPage>
    <description>Adding another Tab</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Needed_by__c</fullName>
        <description>Fulfillment Date</description>
        <label>Date Needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Job Description</description>
        <inlineHelpText>Details</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <description>Max salary</description>
        <inlineHelpText>Sal</inlineHelpText>
        <label>Salary</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Travel needed</description>
        <label>Travel</label>
        <type>Checkbox</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>